Added Some more functions

--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./pages/careers.html" id="Careers-link" class="active-link"
-                      >Careers</a
-                    >
+                    <a href="./pages/careers.html" id="Careers-link">Careers</a>
                   </li>
                   <li>
                     <a id="About-us" class="active-link" href="#">About Us</a>
@@ -232,7 +230,9 @@
         <div class="auto-container">
           <div class="services-card">
             <div class="service-owl owl-carousel owl-theme">
-              <div class="cards item">
+              <div
+                class="cards item d-flex justify-content-between align-content-center m-auto"
+              >
                 <div class="card-upper">
                   <div class="flat-icon">
                     <i class="fa-solid fa-laptop-code"></i>
@@ -941,10 +941,16 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Advanced Tech</a></li>
-                  <li><a href="#">Maintenance and Support</a></li>
-                  <li><a href="#">Advisory</a></li>
+                  <li>
+                    <a href="./pages/softwaredev.html">Software Development</a>
+                  </li>
+                  <li><a href="./pages/advisory.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./pages/maintenance.html"
+                      >Maintenance and Support</a
+                    >
+                  </li>
+                  <li><a href="./pages/advisory.html">Advisory</a></li>
                 </ul>
               </div>
             </div>
@@ -952,11 +958,12 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Technologies</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a id="home" href="#">Home</a></li>
+                  <li><a id="service-btn" href="#">Services</a></li>
+                  <li><a id="tech-btn" href="#">Technologies</a></li>
+                  <li><a href="./pages/careers.html">Careers</a></li>
+                  <li><a id="About-us" href="#">About Us</a></li>
+                  <li><a id="Contact-us" href="#">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -989,15 +996,13 @@
         <li><a id="home-sidebar" href="#">Home</a></li>
         <li class="service-li">
           <a id="Service-sidebar" href="#">Services</a>
-          <!-- <ul class="sidebar-dropdown-menu" style="text-wrap: nowrap;">
+          <!-- <ul class="service-ul">
             <li><a href="#">Software Development</a></li>
-            <li><a href="#">Advanced Tech</a></li>
-            <li><a href="#">Maintenance and Support</a></li>
-            <li><a href="#">Advisory</a></li>
-          </ul>
-        </li> -->
+            <li><a href="#">Software Development</a></li>
+            <li><a href="#">Software Development</a></li>
+            <li><a href="#">Software Development</a></li>
+          </ul> -->
         </li>
-
         <li><a id="tech-sidebar" href="#">Technologies</a></li>
         <li><a href="./pages/careers.html">Careers</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
