--- a/pages/careers.html
+++ b/pages/careers.html
@@ -60,11 +60,7 @@
               <div class="menu-list">
                 <ul style="margin: 0">
                   <li>
-                    <a
-                      id="home"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
-                      href="./index.html"
+                    <a id="home" class="active-link" href="../index.html"
                       ><span>Home</span></a
                     >
                   </li>
@@ -101,9 +97,17 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#" class=".main-a">Technologies</a></li>
+                  <li><a href="../index.html" class=".main-a">Technologies</a></li>
                   <li>
-                    <a id="About-us" class="active-link" href="#">About Us</a>
+                    <a
+                      href="#"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      >Careers</a
+                    >
+                  </li>
+                  <li>
+                    <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
                     <a id="Contact-us" class="active-link" href="#"
@@ -163,7 +167,7 @@
         <div class="auto-container">
           <div class="gallery-title">
             <h3 class="sec-title-gallery">
-              <i class="fa-brands fa-studiovinari"></i>OUR PLACED 
+              <i class="fa-brands fa-studiovinari"></i>OUR PLACED
             </h3>
             <h2 class="gallery-title-head">Placed Students</h2>
             <div class="sec-title-seperator">
@@ -465,11 +469,11 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Technologies</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../index.html">Services</a></li>
+                  <li><a href="../index.html">Technologies</a></li>
+                  <li><a href="./aboutus.html">About Us</a></li>
+                  <li><a href="../index.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -500,11 +504,11 @@
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="#">Technologies</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a id="contact-sidebar" href="#">Contact</a></li>
+        <li><a id="Service-sidebar" href="../index.html">Services</a></li>
+        <li><a href="../index.html">Technologies</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
+        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
     </div>
 
