--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -60,16 +60,15 @@
               <div class="menu-list">
                 <ul style="margin: 0">
                   <li>
-                    <a
-                      id="home"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
-                      href="../index.html"
-                      ><span>Home</span></a
-                    >
+                    <a id="home" href="../index.html"><span>Home</span></a>
                   </li>
                   <li class="dropdown">
-                    <a href="#" class="main-a">Services</a>
+                    <a
+                      href="#"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      >Services</a
+                    >
                     <ul class="services-list">
                       <li>
                         <a href="./softwaredev.html"
@@ -101,12 +100,15 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#" class=".main-a">Technologies</a></li>
                   <li>
-                    <a id="About-us" class="active-link" href="#">About Us</a>
+                    <a href="../index.html" class=".main-a">Technologies</a>
+                  </li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li>
+                    <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#"
+                    <a id="Contact-us" class="active-link" href="../index.html"
                       >Contact Us</a
                     >
                   </li>
@@ -179,8 +181,14 @@
                   of your product and resolve their problem
                 </p>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam officia fuga saepe. Laudantium quod voluptatibus modi laborum esse saepe itaque enim perferendis, perspiciatis quasi corporis ullam, earum, nihil dolore aperiam?
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione fugiat adipisci iure sapiente blanditiis! Doloremque consequatur voluptatibus error facere commodi voluptatum! Dolore excepturi neque doloremque earum voluptas aspernatur, modi fuga?
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Veniam officia fuga saepe. Laudantium quod voluptatibus modi
+                  laborum esse saepe itaque enim perferendis, perspiciatis quasi
+                  corporis ullam, earum, nihil dolore aperiam? Lorem ipsum dolor
+                  sit, amet consectetur adipisicing elit. Ratione fugiat
+                  adipisci iure sapiente blanditiis! Doloremque consequatur
+                  voluptatibus error facere commodi voluptatum! Dolore excepturi
+                  neque doloremque earum voluptas aspernatur, modi fuga?
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
@@ -228,7 +236,9 @@
                 <ul class="service-list-tab">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -297,10 +307,10 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Advanced Tech</a></li>
-                  <li><a href="#">Maintenance and Support</a></li>
-                  <li><a href="#">Advisory</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
             </div>
@@ -308,11 +318,12 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Technologies</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../index.html">Services</a></li>
+                  <li><a href="../index.html">Technologies</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./aboutus.html">About Us</a></li>
+                  <li><a href="../index.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -342,11 +353,12 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="#">Home</a></li>
-        <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="#">Technologies</a></li>
-        <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a id="contact-sidebar" href="#">Contact</a></li>
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li><a id="Service-sidebar" href="../index.html">Services</a></li>
+        <li><a href="../index.html">Technologies</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
+        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
     </div>
 
