--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -60,16 +60,15 @@
               <div class="menu-list">
                 <ul style="margin: 0">
                   <li>
-                    <a
-                      id="home"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
-                      href="../index.html"
-                      ><span>Home</span></a
-                    >
+                    <a id="home" href="../index.html"><span>Home</span></a>
                   </li>
                   <li class="dropdown">
-                    <a href="#" class="main-a">Services</a>
+                    <a
+                      href="#"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      >Services</a
+                    >
                     <ul class="services-list">
                       <li>
                         <a href="./softwaredev.html"
@@ -101,12 +100,13 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#" class=".main-a">Technologies</a></li>
+                  <li><a href="../index.html" class=".main-a">Technologies</a></li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
                   <li>
-                    <a id="About-us" class="active-link" href="#">About Us</a>
+                    <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#"
+                    <a id="Contact-us" class="active-link" href="../index.html"
                       >Contact Us</a
                     >
                   </li>
@@ -311,10 +311,10 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Advanced Tech</a></li>
-                  <li><a href="#">Maintenance and Support</a></li>
-                  <li><a href="#">Advisory</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
             </div>
@@ -322,11 +322,12 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Technologies</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../index.html">Services</a></li>
+                  <li><a href="../index.html">Technologies</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./aboutus.html">About Us</a></li>
+                  <li><a href="../index.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -356,11 +357,12 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="#">Home</a></li>
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="#">Technologies</a></li>
-        <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a id="contact-sidebar" href="#">Contact</a></li>
+        <li><a href="../index.html">Technologies</a></li>
+        <li><a href="../index.html">Careers</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
+        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
     </div>
 
