--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="auto-container">
             <nav class="nav-bar">
               <div class="logo">
-                <img src="./assets/header-logo.png" alt="" />
+                <img id="logo-image" src="./assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
                 <ul style="margin: 0">
