Added projects page links in all pages

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -101,6 +101,7 @@
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
                     <a
                       id="About-us"
