--- a/pages/careers.html
+++ b/pages/careers.html
@@ -103,8 +103,11 @@
                       href="#"
                       class="active-link home-color .main-a"
                       style="color: #0092ff"
-                      >Careers</a
+                      >Career</a
                     >
+                  </li>
+                  <li>
+                    <a href="./projects.html">Project</a>
                   </li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
