--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -104,6 +104,7 @@
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
                     <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
@@ -319,9 +320,8 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="../index.html">Services</a></li>
-                  <li><a href="../index.html">Technologies</a></li>
-                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="../index.html">Contact Us</a></li>
                 </ul>
@@ -354,9 +354,8 @@
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a id="Service-sidebar" href="../index.html">Services</a></li>
-        <li><a href="../index.html">Technologies</a></li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
+        <li><a href="./projects.html">Project</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
