--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/" />
     <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
     <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
     <link
@@ -39,11 +40,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
@@ -112,6 +109,11 @@
                   </li>
                   <li>
                     <a href="./pages/careers.html" id="Careers-link">Careers</a>
+                  </li>
+                  <li>
+                    <a href="./pages/projects.html" id="Careers-link"
+                      >Projects</a
+                    >
                   </li>
                   <li>
                     <a id="About-us" class="active-link" href="#">About Us</a>
@@ -894,26 +896,7 @@
                 <h3>Natural Language Processing</h3>
               </div>
             </div>
-            <div class="tech-card">
-              <div class="tech-up">
-                <img
-                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
-                />
-              </div>
-              <div class="tech-down">
-                <h3>Bootstrap</h3>
-              </div>
-            </div>
-            <div class="tech-card">
-              <div class="tech-up">
-                <img
-                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg"
-                />
-              </div>
-              <div class="tech-down">
-                <h3>Tailwind</h3>
-              </div>
-            </div>
+            
           </div>
         </div>
       </section>
@@ -959,11 +942,14 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a id="service-btn" href="#">Services</a></li>
-                  <li><a id="tech-btn" href="#">Technologies</a></li>
                   <li><a href="./pages/careers.html">Careers</a></li>
-                  <li><a id="About-us" href="#">About Us</a></li>
-                  <li><a id="Contact-us" href="#">Contact Us</a></li>
+                  <li><a href="./pages/projects.html">Projects</a></li>
+                  <li>
+                    <a id="About-us" href="./pages/aboutus.html">About Us</a>
+                  </li>
+                  <li>
+                    <a id="About-us" href="./pages/aboutus.html">Contact Us</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -1005,11 +991,16 @@
         </li>
         <li><a id="tech-sidebar" href="#">Technologies</a></li>
         <li><a href="./pages/careers.html">Careers</a></li>
+        <li><a href="./pages/projects.html">Projects</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a id="contact-sidebar" href="#">Contact</a></li>
       </ul>
     </div>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
