--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -103,7 +103,8 @@
                   <li>
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -323,9 +324,8 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="../index.html">Services</a></li>
-                  <li><a href="../index.html">Technologies</a></li>
-                  <li><a href="./careers.html">Technologies</a></li>
+                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="../index.html">Contact Us</a></li>
                 </ul>
@@ -358,9 +358,8 @@
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="../index.html">Technologies</a></li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
+        <li><a href="./careers.html">Project</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
