--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/softwaredev.css" />
+    <link rel="stylesheet" href="../css/projects.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -32,17 +32,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="odometer-theme-car.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy | Software Development</title>
+    <title>SciPy | Projects</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
@@ -65,8 +61,7 @@
                   <li class="dropdown">
                     <a
                       href="#"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
+                      class=".main-a"
                       >Services</a
                     >
                     <ul class="services-list">
@@ -100,11 +95,21 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="../index.html" class=".main-a">Technologies</a></li>
-                  <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
-                    <a id="About-us"  href="./aboutus.html">About Us</a>
+                    <a href="../index.html" class=".main-a">Technologies</a>
+                  </li>
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  <li>
+                    <a
+                      href="./projects.html"
+                      class="active-link home-color .main-a"
+                      href="#"
+                      style="color: #0092ff"
+                      >Project</a
+                    >
+                  </li>
+                  <li>
+                    <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
                     <a id="Contact-us" class="active-link" href="../index.html"
@@ -151,139 +156,118 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Software Development</h1>
+              <h1 class="title-abt">Projects</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Software Development</p></li>
+                <li><p class="page-about">Projects</p></li>
               </ul>
             </div>
           </div>
         </div>
       </section>
-      <section class="main-page">
+      <section class="projects-one">
         <div class="auto-container">
-          <div class="content-row">
-            <div class="content-col">
-              <img
-                class="main-img"
-                src="../assets/projects/project-1.jpg"
-                alt=""
-              />
-              <div class="lower-content">
-                <h3>Software Development</h3>
-                <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
-                </p>
-                <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
-                </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
-                </p>
-                <div class="lower-content-row">
-                  <div class="lower-content-col">
-                    <img
-                      class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
-                    </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
-                  </div>
+          <div class="projects-row row clearfix">
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
                 </div>
               </div>
             </div>
-            <div class="content-col">
-              <div class="widget-content">
-                <h6>Search Here</h6>
-                <div class="search-input">
-                  <input type="search" placeholder="Enter Your Keyword..." />
-                  <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
                 </div>
               </div>
-              <div class="widget-content">
-                <h6>Services List</h6>
-                <ul class="service-list-tab">
-                  <li><a href="./softwaredev.html">Software Development</a></li>
-                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li>
-                    <a href="./maintenance.html">Maintenance and Support</a>
-                  </li>
-                  <li><a href="./advisory.html">Advisory</a></li>
-                </ul>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
               </div>
-              <div class="widget-content">
-                <h6>Social Icon</h6>
-                <ul class="social-icons-tab">
-                  <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                  </li>
-                </ul>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
               </div>
-              <div class="widget-content">
-                <h6>Brochure</h6>
-                <ul class="Brochure-tab">
-                  <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file"></i> Brochure.doc
-                      <span>80kb</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file-pdf"></i> Brochure.pdf
-                      <span>80kb</span></a
-                    >
-                  </li>
-                </ul>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
               </div>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
+              <div class="projects">
+                <img src="../assets/projects/projects-page.jpg" alt="" />
+                <div class="projects-overlay">
+                  <a href="#">
+                    <img src="../assets/Icons/eye.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project_pages">
+            <div class="project-nums">
+              <a href="#"><i class="fa-solid fa-arrow-left" style="margin: 0px;"></i></a>
+              <div class="nums">
+              <a href="#">01</a>
+              <a href="#">02</a>
+              <a href="#">03</a>
+              </div>
+              <a href="#"><i class="fa-solid fa-arrow-right m-0"></i></a>
             </div>
           </div>
         </div>
@@ -314,7 +298,9 @@
                 <ul class="main-footer-list">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -324,8 +310,8 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <!-- <li><a href="../index.html">Services</a></li> -->
-                  <!-- <li><a href="../index.html">Technologies</a></li> -->
+                  <li><a href="../index.html">Services</a></li>
+                  <li><a href="../index.html">Technologies</a></li>
                   <li><a href="./careers.html">Careers</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="../index.html">Contact Us</a></li>
@@ -359,13 +345,18 @@
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        <li><a id="Service-sidebar" href="#">Services</a></li>
+        <li><a href="../index.html">Technologies</a></li>
+        <li><a href="../index.html">Careers</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
     </div>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
