added contacts page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                     <a id="About-us" class="active-link" href="#">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#"
+                    <a
+                      id="Contact-us"
+                      class="main-a"
+                      href="./pages/contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -719,15 +722,28 @@
             </div>
           </div>
           <div class="company-loaction">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199398!2d76.94919077573755!3d8.501327297023996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1694704732756!5m2!1sen!2sin"
-              width="1600"
-              height="400"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <div class="iframe-container">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199416!2d76.94919077586248!3d8.501327297023833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1696574468092!5m2!1sen!2sin"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="iframe-container">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199416!2d76.94919077586248!3d8.501327297023833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1696574468092!5m2!1sen!2sin"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
@@ -896,7 +912,6 @@
                 <h3>Natural Language Processing</h3>
               </div>
             </div>
-            
           </div>
         </div>
       </section>
@@ -948,7 +963,7 @@
                     <a id="About-us" href="./pages/aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="About-us" href="./pages/aboutus.html">Contact Us</a>
+                    <a id="About-us" href="./pages/contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -979,7 +994,7 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="./assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="#">Home</a></li>
+        <li style="margin-top: 50px"><a id="home-sidebar" href="#">Home</a></li>
         <li class="service-li">
           <a id="Service-sidebar" href="#">Services</a>
           <!-- <ul class="service-ul">
@@ -990,10 +1005,10 @@
           </ul> -->
         </li>
         <li><a id="tech-sidebar" href="#">Technologies</a></li>
-        <li><a href="./pages/careers.html">Careers</a></li>
-        <li><a href="./pages/projects.html">Projects</a></li>
+        <li><a href="./pages/careers.html">Career</a></li>
+        <li><a href="./pages/projects.html">Project</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a id="contact-sidebar" href="#">Contact</a></li>
+        <li><a id="contact-sidebar" href="./pages/contact.html">Contact</a></li>
       </ul>
     </div>
     <script
