--- a/pages/careers.html
+++ b/pages/careers.html
@@ -97,7 +97,9 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="../index.html" class=".main-a">Technologies</a></li>
+                  <li>
+                    <a href="../index.html" class=".main-a">Technologies</a>
+                  </li>
                   <li>
                     <a
                       href="#"
@@ -113,7 +115,10 @@
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#"
+                    <a
+                      id="Contact-us"
+                      class="active-link"
+                      href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -138,7 +143,7 @@
                 <div class="header-top-nav">
                   <a href="#">Terms & Conditions</a>
                   <a class="terms-not" href="#">Privacy Policy</a>
-                  <a class="terms-not" href="#">Contact Us</a>
+                  <a class="terms-not" href="./contact.html">Contact Us</a>
                 </div>
                 <div class="header-right-nav">
                   <div class="email-header">
@@ -476,7 +481,7 @@
                   <li><a href="../index.html">Services</a></li>
                   <li><a href="../index.html">Technologies</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="../index.html">Contact Us</a></li>
+                  <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -507,11 +512,10 @@
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a id="Service-sidebar" href="../index.html">Services</a></li>
         <li><a href="../index.html">Technologies</a></li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
     </div>
 
