--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -109,7 +109,7 @@
                     <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="../index.html"
+                    <a id="Contact-us" class="active-link" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -134,7 +134,7 @@
                 <div class="header-top-nav">
                   <a href="#">Terms & Conditions</a>
                   <a class="terms-not" href="#">Privacy Policy</a>
-                  <a class="terms-not" href="#">Contact Us</a>
+                  <a class="terms-not" href="./contact.html">Contact Us</a>
                 </div>
                 <div class="header-right-nav">
                   <div class="email-header">
@@ -323,7 +323,7 @@
                   <li><a href="./careers.html">Career</a></li>
                   <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="../index.html">Contact Us</a></li>
+                  <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -357,7 +357,7 @@
         <li><a href="./careers.html">Career</a></li>
         <li><a href="./projects.html">Project</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
     </div>
 
