--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,7 +112,7 @@
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="../index.html"
+                    <a id="Contact-us" class="active-link" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -137,7 +137,7 @@
                 <div class="header-top-nav">
                   <a href="#">Terms & Conditions</a>
                   <a class="terms-not" href="#">Privacy Policy</a>
-                  <a class="terms-not" href="#">Contact Us</a>
+                  <a class="terms-not" href="./contact.html">Contact Us</a>
                 </div>
                 <div class="header-right-nav">
                   <div class="email-header">
@@ -310,11 +310,10 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="../index.html">Services</a></li>
-                  <li><a href="../index.html">Technologies</a></li>
-                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./careers.html">career</a></li>
+                  <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="../index.html">Contact Us</a></li>
+                  <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -346,10 +345,10 @@
         <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="../index.html">Technologies</a></li>
-        <li><a href="../index.html">Careers</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./projects.html">Careers</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
     </div>
     <script
