--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -107,7 +107,7 @@
                     <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="../index.html"
+                    <a id="Contact-us" class="active-link" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -132,7 +132,7 @@
                 <div class="header-top-nav">
                   <a href="#">Terms & Conditions</a>
                   <a class="terms-not" href="#">Privacy Policy</a>
-                  <a class="terms-not" href="#">Contact Us</a>
+                  <a class="terms-not" href="./contact.html">Contact Us</a>
                 </div>
                 <div class="header-right-nav">
                   <div class="email-header">
@@ -328,7 +328,7 @@
                   <!-- <li><a href="../index.html">Technologies</a></li> -->
                   <li><a href="./careers.html">Careers</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="../index.html">Contact Us</a></li>
+                  <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -362,7 +362,7 @@
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
     </div>
 
